--- a/WebResumen/Views/CiclosAutoClaveVapor/Index.cshtml
+++ b/WebResumen/Views/CiclosAutoClaveVapor/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebResumen.Models.CiclosAutoclaves>
+﻿@model IEnumerable<WebResumen.Models.CiclosSabiDos>
 
 @{
     ViewData["Title"] = "Index";
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    @*<a asp-action="Create">Create New</a>*@
+    <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -15,19 +15,19 @@
             <th>
                 @Html.DisplayNameFor(model => model.IdAutoclave)
             </th>
-            @*<th>
+            <th>
                 @Html.DisplayNameFor(model => model.IdSeccion)
-            </th>*@
-            @*<th>
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Tinicio)
-            </th>*@
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.NumeroCiclo)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Programa)
             </th>
-            @*<th>
+            <th>
                 @Html.DisplayNameFor(model => model.Modelo)
             </th>
             <th>
@@ -61,10 +61,34 @@
                 @Html.DisplayNameFor(model => model.DuracionTotalF2)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Tif2)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.TisubF2)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Tff2)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.TfsubF2)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Fase3)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.DuracionTotalF3)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Tif3)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.TisubF3)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Tff3)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.TfsubF3)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Fase4)
@@ -73,22 +97,16 @@
                 @Html.DisplayNameFor(model => model.DuracionTotalF4)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Tif4)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.TisubF4)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Fase5)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.DuracionTotalF5)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Tif5)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TisubF5)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Tff5)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TfsubF5)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Fase6)
@@ -97,43 +115,28 @@
                 @Html.DisplayNameFor(model => model.DuracionTotalF6)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Tif6)
+                @Html.DisplayNameFor(model => model.Fase7A)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.TisubF6)
+                @Html.DisplayNameFor(model => model.DuracionTotalF7a)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Tff6)
+                @Html.DisplayNameFor(model => model.Fase8A)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.TfsubF6)
+                @Html.DisplayNameFor(model => model.DuracionTotalF8a)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Fase7)
+                @Html.DisplayNameFor(model => model.Fase7B)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.DuracionTotalF7)
+                @Html.DisplayNameFor(model => model.DuracionTotalF7b)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Tif7)
+                @Html.DisplayNameFor(model => model.Fase8B)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.TisubF7)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Fase8)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DuracionTotalF8)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Tif8)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TisubF8)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Tff8)
+                @Html.DisplayNameFor(model => model.DuracionTotalF8b)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Fase9)
@@ -166,16 +169,10 @@
                 @Html.DisplayNameFor(model => model.Fase12)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.DuracionTotalF12)
+                @Html.DisplayNameFor(model => model.Tif12)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Fase13)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Tff13)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TfsubF13)
+                @Html.DisplayNameFor(model => model.TisubF12)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.HoraInicio)
@@ -212,7 +209,7 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.ErrorCiclo)
-            </th>*@
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.FechaRegistro)
             </th>
@@ -225,19 +222,19 @@
             <td>
                 @Html.DisplayFor(modelItem => item.IdAutoclave)
             </td>
-            @*<td>
+            <td>
                 @Html.DisplayFor(modelItem => item.IdSeccion)
-            </td>*@
-            @*<td>
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.Tinicio)
-            </td>*@
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.NumeroCiclo)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Programa)
             </td>
-            @*<td>
+            <td>
                 @Html.DisplayFor(modelItem => item.Modelo)
             </td>
             <td>
@@ -271,10 +268,34 @@
                 @Html.DisplayFor(modelItem => item.DuracionTotalF2)
             </td>
             <td>
+                @Html.DisplayFor(modelItem => item.Tif2)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TisubF2)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Tff2)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TfsubF2)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.Fase3)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.DuracionTotalF3)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Tif3)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TisubF3)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Tff3)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TfsubF3)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Fase4)
@@ -283,22 +304,16 @@
                 @Html.DisplayFor(modelItem => item.DuracionTotalF4)
             </td>
             <td>
+                @Html.DisplayFor(modelItem => item.Tif4)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TisubF4)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.Fase5)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.DuracionTotalF5)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Tif5)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TisubF5)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Tff5)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TfsubF5)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Fase6)
@@ -307,43 +322,28 @@
                 @Html.DisplayFor(modelItem => item.DuracionTotalF6)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Tif6)
+                @Html.DisplayFor(modelItem => item.Fase7A)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.TisubF6)
+                @Html.DisplayFor(modelItem => item.DuracionTotalF7a)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Tff6)
+                @Html.DisplayFor(modelItem => item.Fase8A)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.TfsubF6)
+                @Html.DisplayFor(modelItem => item.DuracionTotalF8a)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Fase7)
+                @Html.DisplayFor(modelItem => item.Fase7B)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.DuracionTotalF7)
+                @Html.DisplayFor(modelItem => item.DuracionTotalF7b)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Tif7)
+                @Html.DisplayFor(modelItem => item.Fase8B)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.TisubF7)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Fase8)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DuracionTotalF8)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Tif8)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TisubF8)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Tff8)
+                @Html.DisplayFor(modelItem => item.DuracionTotalF8b)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Fase9)
@@ -376,16 +376,10 @@
                 @Html.DisplayFor(modelItem => item.Fase12)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.DuracionTotalF12)
+                @Html.DisplayFor(modelItem => item.Tif12)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Fase13)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Tff13)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TfsubF13)
+                @Html.DisplayFor(modelItem => item.TisubF12)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.HoraInicio)
@@ -422,14 +416,14 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ErrorCiclo)
-            </td>*@
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.FechaRegistro)
             </td>
             <td>
-                @*<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>*@
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
 }
