--- a/WebResumen/Views/MaestroAutoclave/Create.cshtml
+++ b/WebResumen/Views/MaestroAutoclave/Create.cshtml
@@ -1,42 +1,41 @@
 ﻿@model WebResumen.Models.MaestroAutoclave
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Create";
 }
 
-<h1>Edit</h1>
+<h1>Create</h1>
 
 <h4>MaestroAutoclave</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Matricula" class="control-label"></label>
-                <input asp-for="Matricula" class="form-control" disabled = "disabled" class = "form-control"/>
+                <input asp-for="Matricula" class="form-control" />
                 <span asp-validation-for="Matricula" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Nombre" class="control-label"></label>
-                <input asp-for="Nombre" class="form-control"disabled = "disabled" />
+                <input asp-for="Nombre" class="form-control" />
                 <span asp-validation-for="Nombre" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Version" class="control-label"></label>
-                <input asp-for="Version" class="form-control"disabled = "disabled" />
+                <input asp-for="Version" class="form-control" />
                 <span asp-validation-for="Version" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Ip" class="control-label"></label>
-                <input asp-for="Ip" class="form-control"disabled = "disabled" />
+                <input asp-for="Ip" class="form-control" />
                 <span asp-validation-for="Ip" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Seccion" class="control-label"></label>
-                <input asp-for="Seccion" class="form-control"disabled = "disabled" />
-                <span asp-validation-for="Seccion" class="text-danger"> </span>
+                <input asp-for="Seccion" class="form-control" />
+                <span asp-validation-for="Seccion" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Estado" class="control-label"></label>
@@ -45,16 +44,21 @@
             </div>
             <div class="form-group">
                 <label asp-for="UltimoCiclo" class="control-label"></label>
-                <input asp-for="UltimoCiclo" class="form-control" disabled = "disabled" />
-                <span asp-validation-for="UltimoCiclo"  class="text-danger"></span>
+                <input asp-for="UltimoCiclo" class="form-control" />
+                <span asp-validation-for="UltimoCiclo" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="RutaSalida" class="control-label"></label>
-                <input asp-for="RutaSalida" class="form-control"disabled = "disabled" />
+                <input asp-for="RutaSalida" class="form-control" />
                 <span asp-validation-for="RutaSalida" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <label asp-for="RutaSalidaPdf" class="control-label"></label>
+                <input asp-for="RutaSalidaPdf" class="form-control" />
+                <span asp-validation-for="RutaSalidaPdf" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
