--- a/WebResumen/Views/MaestroAutoclave/Details.cshtml
+++ b/WebResumen/Views/MaestroAutoclave/Details.cshtml
@@ -1,12 +1,11 @@
 ﻿@model WebResumen.Models.MaestroAutoclave
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Details";
 }
 
-<h1>Delete</h1>
+<h1>Details</h1>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>MaestroAutoclave</h4>
     <hr />
@@ -59,11 +58,15 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.RutaSalida)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.RutaSalidaPdf)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.RutaSalidaPdf)
+        </dd>
     </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+</div>
+<div>
+    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    <a asp-action="Index">Back to List</a>
 </div>
