--- a/WebResumen/Views/MaestroAutoclave/Edit.cshtml
+++ b/WebResumen/Views/MaestroAutoclave/Edit.cshtml
@@ -1,17 +1,18 @@
 ﻿@model WebResumen.Models.MaestroAutoclave
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
 }
 
-<h1>Create</h1>
+<h1>Edit</h1>
 
 <h4>MaestroAutoclave</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Matricula" class="control-label"></label>
                 <input asp-for="Matricula" class="form-control" />
@@ -53,7 +54,12 @@
                 <span asp-validation-for="RutaSalida" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <label asp-for="RutaSalidaPdf" class="control-label"></label>
+                <input asp-for="RutaSalidaPdf" class="form-control" />
+                <span asp-validation-for="RutaSalidaPdf" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
