Se añade politica de privacidad-logo -y querys basicas

--- a/WebResumen/Views/Home/Index.cshtml
+++ b/WebResumen/Views/Home/Index.cshtml
@@ -3,6 +3,125 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Autoclaves Baxter</h1>
+    <p> <a href="">Ciclos de Esterilización Completada</a>.</p>
 </div>
+
+<div class="card-group">
+    <div class="card">
+      <a href="https://localhost:44336/AutoClaveA"> <img class="card-img-top" src="~/img/Autoclave.png" alt="Card image cap"></a>
+            <div class="card-body">
+                <a href="https://localhost:44336/AutoClaveA">   <h5 class="card-title">NF8387A</h5></a>
+                <p class="card-text">Autoclave A. Modelo FOW5 localizado en el área de Sabi I</p>
+                <p class="card-text"><small class="text-muted">Para más detalles haga click en el título o en la imagen</small></p>
+            </div>
+</div>
+    <div class="card">
+        <a href="https://localhost:44336/AutoClaveB"> <img class="card-img-top" src="~/img/Autoclave.png" alt="Card image cap"></a>
+        <div class="card-body">
+            <a href="https://localhost:44336/AutoClaveB">   <h5 class="card-title"> 8388B</h5></a>
+            <p class="card-text">Autoclave B. Modelo FOW5 localizado en el área de Sabi I</p>
+            <p class="card-text"><small class="text-muted">Para más detalles haga click en el título o en la imagen</small></p>
+        </div>
+    </div>
+    <div class="card">
+        <a href="https://localhost:44336/AutoClaveC"> <img class="card-img-top" src="~/img/Autoclave.png" alt="Card image cap"></a>
+        <div class="card-body">
+            <a href="https://localhost:44336/AutoClaveC">   <h5 class="card-title">8389C</h5></a>
+            <p class="card-text">Autoclave C. Modelo FOW5 localizado en el área de Sabi I</p>
+            <p class="card-text"><small class="text-muted">Para más detalles haga click en el título o en la imagen</small></p>
+        </div>
+    </div>
+    <div class="card">
+        <a href="https://localhost:44336/AutoClaveD"> <img class="card-img-top" src="~/img/Autoclave.png" alt="Card image cap"></a>
+        <div class="card-body">
+            <a href="https://localhost:44336/AutoClaveD">   <h5 class="card-title">8607D</h5></a>
+            <p class="card-text">Autoclave D. Modelo FOW5 localizado en el área de Sabi I</p>
+            <p class="card-text"><small class="text-muted">Para más detalles haga click en el título o en la imagen</small></p>
+        </div>
+    </div>
+    <div class="card">
+        <a href="https://localhost:44336/AutoClaveE"> <img class="card-img-top" src="~/img/Autoclave.png" alt="Card image cap"></a>
+        <div class="card-body">
+            <a href="https://localhost:44336/AutoClaveE">  <h5 class="card-title"> NF1029E</h5></a>
+            <p class="card-text">Autoclave E. Modelo FOW5 localizado en el área de Sabi I</p>
+            <p class="card-text"><small class="text-muted">Para más detalles haga click en el título o en la imagen</small></p>
+        </div>
+    </div>
+
+</div>
+
+
+
+<div class="card-group">
+    <div class="card">
+        <a href="https://localhost:44336/AutoClaveF"> <img class="card-img-top" src="~/img/Autoclave.png" alt="Card image cap"></a>
+        <div class="card-body">
+            <a href="https://localhost:44336/AutoClaveF">   <h5 class="card-title">NF1030F</h5></a>
+            <p class="card-text">Autoclave F. Modelo FOW5 localizado en el área de Sabi I</p>
+            <p class="card-text"><small class="text-muted">Para más detalles haga click en el título o en la imagen</small></p>
+        </div>
+    </div>
+    <div class="card">
+        <a href="https://localhost:44336/AutoClaveG"> <img class="card-img-top" src="~/img/Autoclave.png" alt="Card image cap"></a>
+        <div class="card-body">
+            <a href="https://localhost:44336/AutoClaveG">   <h5 class="card-title">NF1031G</h5></a>
+            <p class="card-text">Autoclave G. Modelo FOW5 localizado en el área de Sabi I</p>
+            <p class="card-text"><small class="text-muted">Para más detalles haga click en el título o en la imagen</small></p>
+        </div>
+    </div>
+    <div class="card">
+        <a href="https://localhost:44336/AutoClaveH"> <img class="card-img-top" src="~/img/Autoclave.png" alt="Card image cap"></a>
+        <div class="card-body">
+            <a href="https://localhost:44336/AutoClaveH">   <h5 class="card-title">NA0658EGH</h5></a>
+            <p class="card-text">Autoclave H. Modelo FOW5SP localizado en el área de Sabi I</p>
+            <p class="card-text"><small class="text-muted">Para más detalles haga click en el título o en la imagen</small></p>
+        </div>
+    </div>
+    <div class="card">
+        <a href="https://localhost:44336/AutoClaveI"> <img class="card-img-top" src="~/img/Autoclave.png" alt="Card image cap"></a>
+        <div class="card-body">
+            <a href="https://localhost:44336/AutoClaveI">   <h5 class="card-title">NA0672EGI</h5></a>
+            <p class="card-text">Autoclave I. Modelo FOW5 localizado en el área de Sabi I</p>
+            <p class="card-text"><small class="text-muted">Para más detalles haga click en el título o en la imagen</small></p>
+        </div>
+    </div>
+    <div class="card">
+        <a href="https://localhost:44336/AutoClaveM"> <img class="card-img-top" src="~/img/Autoclave.png" alt="Card image cap"></a>
+        <div class="card-body">
+            <a href="https://localhost:44336/AutoClaveM">   <h5 class="card-title">NA0611EFM</h5></a>
+            <p class="card-text">Autoclave M. Modelo FOW5SP localizado en el área de Sabi I</p>
+            <p class="card-text"><small class="text-muted">Para más detalles haga click en el título o en la imagen</small></p>
+        </div>
+    </div>
+
+</div>
+
+
+<div class="card-group">
+    <div class="card">
+        <a href="https://localhost:44336/AutoClaveJJ"> <img class="card-img-top" src="~/img/Autoclave.png" alt="Card image cap"></a>
+        <div class="card-body">
+            <a href="https://localhost:44336/AutoClaveJJ">   <h5 class="card-title"> 0827J</h5></a>
+            <p class="card-text">Autoclave J. Modelo XFOA8/C00E localizado en el área de Sabi II</p>
+            <p class="card-text"><small class="text-muted">Para más detalles haga click en el título o en la imagen</small></p>
+        </div>
+    </div>
+    <div class="card">
+        <a href="https://localhost:44336/AutoClaveK"> <img class="card-img-top" src="~/img/Autoclave.png" alt="Card image cap"></a>
+        <div class="card-body">
+            <a href="https://localhost:44336/AutoClaveK">   <h5 class="card-title">0828K</h5></a>
+            <p class="card-text">Autoclave K. Modelo XFOA8/C00E localizado en el área de Sabi II</p>
+            <p class="card-text"><small class="text-muted">Para más detalles haga click en el título o en la imagen</small></p>
+        </div>
+    </div>
+    <div class="card">
+        <a href="https://localhost:44336/AutoClaveL"> <img class="card-img-top" src="~/img/Autoclave.png" alt="Card image cap"></a>
+        <div class="card-body">
+            <a href="https://localhost:44336/AutoClaveL">   <h5 class="card-title">1167L</h5></a>
+            <p class="card-text">Autoclave L. Modelo FOA8/FA localizado en el área de Sabi II</p>
+            <p class="card-text"><small class="text-muted">Para más detalles haga click en el título o en la imagen</small></p>
+        </div>
+    </div>
+</div>
+
