Se agregan controladores faltantes y se inicia controladorAutoClaveAgua

--- a/WebResumen/Views/CiclosAutoclaveAgua/Index.cshtml
+++ b/WebResumen/Views/CiclosAutoclaveAgua/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
+<table class="container-fluid table">
     <thead>
         <tr>
             <th>
@@ -18,16 +18,16 @@
             <th>
                 @Html.DisplayNameFor(model => model.IdSeccion)
             </th>
-            <th>
+            @*<th>
                 @Html.DisplayNameFor(model => model.Tinicio)
-            </th>
+            </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.NumeroCiclo)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Programa)
             </th>
-            <th>
+            @*<th>
                 @Html.DisplayNameFor(model => model.Modelo)
             </th>
             <th>
@@ -35,14 +35,14 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Operador)
-            </th>
+            </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.CodigoProducto)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Lote)
             </th>
-            <th>
+            @*<th>
                 @Html.DisplayNameFor(model => model.Notas)
             </th>
             <th>
@@ -50,49 +50,49 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Fase1)
-            </th>
+            </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.DuracionTotalF1)
             </th>
-            <th>
+            @*<th>
                 @Html.DisplayNameFor(model => model.Fase2)
-            </th>
+            </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.DuracionTotalF2)
             </th>
-            <th>
+            @*<th>
                 @Html.DisplayNameFor(model => model.Fase3)
-            </th>
+            </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.DuracionTotalF3)
             </th>
-            <th>
+            @*<th>
                 @Html.DisplayNameFor(model => model.Fase4)
-            </th>
+            </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.DuracionTotalF4)
             </th>
-            <th>
+            @*<th>
                 @Html.DisplayNameFor(model => model.Fase5)
-            </th>
+            </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.DuracionTotalF5)
             </th>
-            <th>
+            @*<th>
                 @Html.DisplayNameFor(model => model.Tif5)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.TisubF5)
-            </th>
+            </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.Tff5)
             </th>
-            <th>
+            @*<th>
                 @Html.DisplayNameFor(model => model.TfsubF5)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Fase6)
-            </th>
+            </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.DuracionTotalF6)
             </th>
@@ -108,25 +108,25 @@
             <th>
                 @Html.DisplayNameFor(model => model.TfsubF6)
             </th>
-            <th>
+            @*<th>
                 @Html.DisplayNameFor(model => model.Fase7)
-            </th>
+            </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.DuracionTotalF7)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Tif7)
             </th>
-            <th>
+            @*<th>
                 @Html.DisplayNameFor(model => model.TisubF7)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Fase8)
-            </th>
+            </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.DuracionTotalF8)
             </th>
-            <th>
+            @*<th>
                 @Html.DisplayNameFor(model => model.Tif8)
             </th>
             <th>
@@ -137,11 +137,11 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Fase9)
-            </th>
+            </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.DuracionTotalF9)
             </th>
-            <th>
+            @*<th>
                 @Html.DisplayNameFor(model => model.Tif9)
             </th>
             <th>
@@ -152,25 +152,25 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Fase10)
-            </th>
+            </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.DuracionTotalF10)
             </th>
-            <th>
+            @*<th>
                 @Html.DisplayNameFor(model => model.Fase11)
-            </th>
+            </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.DuracionTotalF11)
             </th>
-            <th>
+            @*<th>
                 @Html.DisplayNameFor(model => model.Fase12)
-            </th>
+            </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.DuracionTotalF12)
             </th>
-            <th>
+            @*<th>
                 @Html.DisplayNameFor(model => model.Fase13)
-            </th>
+            </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.Tff13)
             </th>
@@ -186,36 +186,36 @@
             <th>
                 @Html.DisplayNameFor(model => model.EsterilizacionN)
             </th>
-            <th>
+            @*<th>
                 @Html.DisplayNameFor(model => model.Tminima)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Tmaxima)
-            </th>
+            </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.DuracionTotal)
             </th>
-            <th>
+            @*<th>
                 @Html.DisplayNameFor(model => model.FtzMin)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.FtzMax)
-            </th>
+            </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.DifMaxMin)
             </th>
-            <th>
+            @*<th>
                 @Html.DisplayNameFor(model => model.AperturaPuerta)
-            </th>
+            </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.TiempoCiclo)
             </th>
-            <th>
+            @*<th>
                 @Html.DisplayNameFor(model => model.ErrorCiclo)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.FechaRegistro)
-            </th>
+            </th>*@
             <th></th>
         </tr>
     </thead>
@@ -228,16 +228,16 @@
             <td>
                 @Html.DisplayFor(modelItem => item.IdSeccion)
             </td>
-            <td>
+            @*<td>
                 @Html.DisplayFor(modelItem => item.Tinicio)
-            </td>
+            </td>*@
             <td>
                 @Html.DisplayFor(modelItem => item.NumeroCiclo)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Programa)
             </td>
-            <td>
+            @*<td>
                 @Html.DisplayFor(modelItem => item.Modelo)
             </td>
             <td>
@@ -245,14 +245,15 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Operador)
-            </td>
+            </td>*@
             <td>
                 @Html.DisplayFor(modelItem => item.CodigoProducto)
             </td>
             <td>
+                @*@Html.Raw(item.Lote.Trim())*@
                 @Html.DisplayFor(modelItem => item.Lote)
             </td>
-            <td>
+            @*<td>
                 @Html.DisplayFor(modelItem => item.Notas)
             </td>
             <td>
@@ -260,83 +261,86 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Fase1)
-            </td>
+            </td>*@
             <td>
                 @Html.DisplayFor(modelItem => item.DuracionTotalF1)
             </td>
-            <td>
+            @*<td>
                 @Html.DisplayFor(modelItem => item.Fase2)
-            </td>
+            </td>*@
             <td>
                 @Html.DisplayFor(modelItem => item.DuracionTotalF2)
             </td>
-            <td>
+            @*<td>
                 @Html.DisplayFor(modelItem => item.Fase3)
-            </td>
+            </td>*@
             <td>
                 @Html.DisplayFor(modelItem => item.DuracionTotalF3)
             </td>
-            <td>
+            @*<td>
                 @Html.DisplayFor(modelItem => item.Fase4)
-            </td>
+            </td>*@
             <td>
                 @Html.DisplayFor(modelItem => item.DuracionTotalF4)
             </td>
-            <td>
+            @*<td>
                 @Html.DisplayFor(modelItem => item.Fase5)
-            </td>
+            </td>*@
             <td>
                 @Html.DisplayFor(modelItem => item.DuracionTotalF5)
             </td>
-            <td>
+            @*<td>
                 @Html.DisplayFor(modelItem => item.Tif5)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.TisubF5)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Tff5)
-            </td>
-            <td>
+            </td>*@
+        <td>
+            @*@Html.DisplayFor(modelItem => item.Tff5)*@
+            @Html.Raw(item.Tff5.Substring(5,7))
+        </td>
+            @*<td>
                 @Html.DisplayFor(modelItem => item.TfsubF5)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Fase6)
-            </td>
+            </td>*@
             <td>
                 @Html.DisplayFor(modelItem => item.DuracionTotalF6)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Tif6)
+                @Html.Raw(item.Tif6.Substring(5, 7))
+                @*@Html.DisplayFor(modelItem => item.Tif6)*@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.TisubF6)
             </td>
             <td>
+                @Html.Raw(item.Tff6.Substring(5, 7))
                 @Html.DisplayFor(modelItem => item.Tff6)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.TfsubF6)
             </td>
-            <td>
+            @*<td>
                 @Html.DisplayFor(modelItem => item.Fase7)
-            </td>
+            </td>*@
             <td>
                 @Html.DisplayFor(modelItem => item.DuracionTotalF7)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Tif7)
             </td>
-            <td>
+            @*<td>
                 @Html.DisplayFor(modelItem => item.TisubF7)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Fase8)
-            </td>
+            </td>*@
             <td>
                 @Html.DisplayFor(modelItem => item.DuracionTotalF8)
             </td>
-            <td>
+            @*<td>
                 @Html.DisplayFor(modelItem => item.Tif8)
             </td>
             <td>
@@ -347,11 +351,11 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Fase9)
-            </td>
+            </td>*@
             <td>
                 @Html.DisplayFor(modelItem => item.DuracionTotalF9)
             </td>
-            <td>
+            @*<td>
                 @Html.DisplayFor(modelItem => item.Tif9)
             </td>
             <td>
@@ -362,25 +366,25 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Fase10)
-            </td>
+            </td>*@
             <td>
                 @Html.DisplayFor(modelItem => item.DuracionTotalF10)
             </td>
-            <td>
+            @*<td>
                 @Html.DisplayFor(modelItem => item.Fase11)
-            </td>
+            </td>*@
             <td>
                 @Html.DisplayFor(modelItem => item.DuracionTotalF11)
             </td>
-            <td>
+            @*<td>
                 @Html.DisplayFor(modelItem => item.Fase12)
-            </td>
+            </td>*@
             <td>
                 @Html.DisplayFor(modelItem => item.DuracionTotalF12)
             </td>
-            <td>
+            @*<td>
                 @Html.DisplayFor(modelItem => item.Fase13)
-            </td>
+            </td>*@
             <td>
                 @Html.DisplayFor(modelItem => item.Tff13)
             </td>
@@ -393,9 +397,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.HoraFin)
             </td>
-            <td>
+            @*<td>
                 @Html.DisplayFor(modelItem => item.EsterilizacionN)
-            </td>
+            </td>*@
             <td>
                 @Html.DisplayFor(modelItem => item.Tminima)
             </td>
@@ -405,32 +409,32 @@
             <td>
                 @Html.DisplayFor(modelItem => item.DuracionTotal)
             </td>
-            <td>
+            @*<td>
                 @Html.DisplayFor(modelItem => item.FtzMin)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.FtzMax)
-            </td>
+            </td>*@
             <td>
                 @Html.DisplayFor(modelItem => item.DifMaxMin)
             </td>
-            <td>
+            @*<td>
                 @Html.DisplayFor(modelItem => item.AperturaPuerta)
-            </td>
+            </td>*@
             <td>
                 @Html.DisplayFor(modelItem => item.TiempoCiclo)
             </td>
-            <td>
+            @*<td>
                 @Html.DisplayFor(modelItem => item.ErrorCiclo)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.FechaRegistro)
-            </td>
-            <td>
+            </td>*@
+            @*<td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
+            </td>*@
         </tr>
 }
     </tbody>
