--- a/WebResumen/Views/AutoclaveJ/Index.cshtml
+++ b/WebResumen/Views/AutoclaveJ/Index.cshtml
@@ -1,13 +1,13 @@
-﻿@model IEnumerable<WebResumen.Models.ViewModelAutoClaveJ>
+﻿@model IEnumerable<WebResumen.Models.CiclosSabiDos>
 
 @{
-    ViewData["Title"] = "View";
+    ViewData["Title"] = "Index";
 }
 
-<h1>View</h1>
+<h1>0827J</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    @*<a asp-action="Create">Create New</a>*@
 </p>
 <table class="table">
     <thead>
@@ -15,22 +15,22 @@
             <th>
                 @Html.DisplayNameFor(model => model.IdAutoclave)
             </th>
-            <th>
+            @*<th>
                 @Html.DisplayNameFor(model => model.IdSeccion)
-            </th>
-            <th>
+            </th>*@
+            @*<th>
                 @Html.DisplayNameFor(model => model.Tinicio)
-            </th>
+            </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.NumeroCiclo)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Programa)
             </th>
-            <th>
+            @*<th>
                 @Html.DisplayNameFor(model => model.Modelo)
-            </th>
-            <th>
+            </th>*@
+            @*<th>
                 @Html.DisplayNameFor(model => model.Programador)
             </th>
             <th>
@@ -173,14 +173,14 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.TisubF12)
-            </th>
+            </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.HoraInicio)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.HoraFin)
             </th>
-            <th>
+            @*<th>
                 @Html.DisplayNameFor(model => model.EsterilizacionN)
             </th>
             <th>
@@ -212,7 +212,7 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.FechaRegistro)
-            </th>
+            </th>*@
             <th></th>
         </tr>
     </thead>
@@ -222,19 +222,19 @@
             <td>
                 @Html.DisplayFor(modelItem => item.IdAutoclave)
             </td>
-            <td>
+            @*<td>
                 @Html.DisplayFor(modelItem => item.IdSeccion)
-            </td>
-            <td>
+            </td>*@
+            @*<td>
                 @Html.DisplayFor(modelItem => item.Tinicio)
-            </td>
+            </td>*@
             <td>
                 @Html.DisplayFor(modelItem => item.NumeroCiclo)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Programa)
             </td>
-            <td>
+            @*<td>
                 @Html.DisplayFor(modelItem => item.Modelo)
             </td>
             <td>
@@ -380,14 +380,14 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.TisubF12)
-            </td>
+            </td>*@
             <td>
                 @Html.DisplayFor(modelItem => item.HoraInicio)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.HoraFin)
             </td>
-            <td>
+            @*<td>
                 @Html.DisplayFor(modelItem => item.EsterilizacionN)
             </td>
             <td>
@@ -419,11 +419,11 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.FechaRegistro)
-            </td>
+            </td>*@
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                @*<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>*@
             </td>
         </tr>
 }
