Se añade tabla AutoClaves Agua y Vapor

--- a/WebResumen/Views/Shared/_Layout.cshtml
+++ b/WebResumen/Views/Shared/_Layout.cshtml
@@ -147,14 +147,16 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.18/pdfmake.min.js"></script>
 
- 
+
 
 
 
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/example.js" asp-append-version="true"></script>
     <script src="~/js/Agua.js" asp-append-version="true"></script>
+    <script src="~/js/vaporApp.js" asp-append-version="true"></script>
     <script src="~/js/myApp.js" asp-append-version="true"></script>
+
 
 
 
