--- a/WebResumen/Views/CiclosAutoclaveAgua/Index.cshtml
+++ b/WebResumen/Views/CiclosAutoclaveAgua/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<WebResumen.Models.CiclosAutoclaves>
 
 @{
-    ViewData["Title"] = "AutoCkaves de Agua";
+    ViewData["Title"] = "AutoClaves de Agua";
 }
 
 <body ng-app="datatablesSampleApp" ng-controller="sampleCtrl">
-    <table datatable  class="table table-striped table-bordered" 
+    <table datatable  class="table table-striped table-bordered thead-dark" 
            dt-options="dtOptions"
            dt-columns="dtColumns">
     </table>
