Se definen los controladores de angular vaporAA y aguaApp

--- a/WebResumen/Views/CiclosAutoclaveAgua/Index.cshtml
+++ b/WebResumen/Views/CiclosAutoclaveAgua/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "AutoClaves de Agua";
 }
 
-<body ng-app="datatablesSampleApp" ng-controller="sampleCtrl">
+<body ng-app="datatablesAguaApp" ng-controller="aguaCtrl">
     <table datatable  class="table table-striped table-bordered thead-dark" 
            dt-options="dtOptions"
            dt-columns="dtColumns">
