--- a/WebResumen/Views/Shared/_Layout.cshtml
+++ b/WebResumen/Views/Shared/_Layout.cshtml
@@ -153,9 +153,9 @@
 
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/example.js" asp-append-version="true"></script>
-    <script src="~/js/Agua.js" asp-append-version="true"></script>
+    @*<script src="~/js/Agua.js" asp-append-version="true"></script>*@
     <script src="~/js/vaporApp.js" asp-append-version="true"></script>
-    <script src="~/js/myApp.js" asp-append-version="true"></script>
+    <script src="~/js/aguaApp.js" asp-append-version="true"></script>
 
 
 
